--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "ES6",
-    "moduleResolution": "node",
+    "module": "CommonJS",
     "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
@@ -37,9 +37,9 @@
     "strict": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
-    "isolatedModules": true,
+    // "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
+    // "moduleDetection": "force",
     "skipLibCheck": true
   }
   // "exclude": [],
